[package]
name = "forex"
version = "0.1.1"
authors = ["Matias Alvin <alvinmatias69@gmail.com>"]
edition = "2018"
description = "Converting currencies in your terminal"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alvinmatias69/forex"
keywords = ["cli"]

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
clap = {version = "2.33", features = ["yaml"]}

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
